exports[`test renders loading version 1`] = `
<div>
<Meta title="Give" image="//s3.amazonaws.com/ns.assets/apollos/you_cant_outgive_god2x1.jpg" />
<Connect(SplitContainerWithoutData) nav={true} classes={{...}}>
<Right background="//s3.amazonaws.com/ns.assets/apollos/42835.marketing.cen.webad.scheduleyourgiving_1x2.jpg" link="/give/schedules" />
</Connect(SplitContainerWithoutData)>
<Left scroll={true} classes={{...}}>
<div className="soft-double-sides@lap-and-up soft-double-ends@lap-and-up soft background--light-primary" style={{...}}>
<div className="text-left soft-double-top@lap-and-up hard-left@lap-and-up soft-half-bottom soft@anchored ">
<div className="soft-double-ends@palm-wide-and-up soft-ends@palm">
<div className="one-whole text-center soft-ends">
<Spinner styles={{...}} />
</div>
</div>
</div>
</div>
<Link to="/give/schedules" className="visually--hidden@lap-and-up" onlyActiveOnIndex={false} style={{...}}>
<div className="ratio--landscape@handheld background--fill" style={{...}}>
<div className="ratio__item" />
</div>
</Link>
<div className="soft-half soft-sides@portable soft-double-sides@anchored">
<h4 className="soft soft-double-ends text-center@lap-and-up flush-bottom">
Learn more about our campaigns...
</h4>
<div className="grid">
<div className="one-whole text-center soft-ends">
<Spinner styles={{...}} />
</div>
</div>
</div>
</Left>
</div>
`;

exports[`test renders not alive version 1`] = `
<div>
<Meta title="Give" image="//s3.amazonaws.com/ns.assets/apollos/you_cant_outgive_god2x1.jpg" />
<Connect(SplitContainerWithoutData) nav={true} classes={{...}}>
<Right background="//s3.amazonaws.com/ns.assets/apollos/42835.marketing.cen.webad.scheduleyourgiving_1x2.jpg" link="/give/schedules" />
</Connect(SplitContainerWithoutData)>
<Left scroll={true} classes={{...}}>
<div className="soft-double-sides@lap-and-up soft-double-ends@lap-and-up soft background--light-primary" style={{...}}>
<div className="text-left soft-double-top@lap-and-up hard-left@lap-and-up soft-half-bottom soft@anchored ">
<div className="soft-double-ends@palm-wide-and-up soft-ends@palm">
<Offline />
</div>
</div>
</div>
<Link to="/give/schedules" className="visually--hidden@lap-and-up" onlyActiveOnIndex={false} style={{...}}>
<div className="ratio--landscape@handheld background--fill" style={{...}}>
<div className="ratio__item" />
</div>
</Link>
<div className="soft-half soft-sides@portable soft-double-sides@anchored">
<h4 className="soft soft-double-ends text-center@lap-and-up flush-bottom">
Learn more about our campaigns...
</h4>
<div className="grid">
<div className="grid__item one-whole push-half-bottom flush-bottom@handheld hard-bottom">
<Card link="/give/campaign/test" linkAll={[undefined]} images={{...}} fallbackImage={{...}} />
</div>
<div className="grid__item one-whole push-half-bottom flush-bottom@handheld hard-bottom">
<Card link="/give/campaign/test" linkAll={[undefined]} images={{...}} fallbackImage={{...}} />
</div>
</div>
</div>
</Left>
</div>
`;

exports[`test renders with props 1`] = `
<div>
<Meta title="Give" image="//s3.amazonaws.com/ns.assets/apollos/you_cant_outgive_god2x1.jpg" />
<Connect(SplitContainerWithoutData) nav={true} classes={{...}}>
<Right background="//s3.amazonaws.com/ns.assets/apollos/42835.marketing.cen.webad.scheduleyourgiving_1x2.jpg" link="/give/schedules" />
</Connect(SplitContainerWithoutData)>
<Left scroll={true} classes={{...}}>
<div className="soft-double-sides@lap-and-up soft-double-ends@lap-and-up soft background--light-primary" style={{...}}>
<div className="text-left soft-double-top@lap-and-up hard-left@lap-and-up soft-half-bottom soft@anchored ">
<div className="soft-double-ends@palm-wide-and-up soft-ends@palm">
<Connect(CartContainer) accounts={{...}} />
</div>
</div>
</div>
<Link to="/give/schedules" className="visually--hidden@lap-and-up" onlyActiveOnIndex={false} style={{...}}>
<div className="ratio--landscape@handheld background--fill" style={{...}}>
<div className="ratio__item" />
</div>
</Link>
<div className="soft-half soft-sides@portable soft-double-sides@anchored">
<h4 className="soft soft-double-ends text-center@lap-and-up flush-bottom">
Learn more about our campaigns...
</h4>
<div className="grid">
<div className="grid__item one-whole push-half-bottom flush-bottom@handheld hard-bottom">
<Card link="/give/campaign/test" linkAll={[undefined]} images={{...}} fallbackImage={{...}} />
</div>
<div className="grid__item one-whole push-half-bottom flush-bottom@handheld hard-bottom">
<Card link="/give/campaign/test" linkAll={[undefined]} images={{...}} fallbackImage={{...}} />
</div>
</div>
</div>
</Left>
</div>
`;
